assignments/spring2021/Assignment4_97411252/pythonProject/gen_3addr/MiniJava_3addrParser.py
# Generated from E:/UNI/Term6/Compiler/Assignments/pythonProject\MiniJava_3addr.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniJava_3addrParser ( Parser ):

    grammarFileName = "MiniJava_3addr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'}'", "'extends'", "';'", "','", "'return'", 
                     "'int'", "'boolean'", "'if'", "'else'", "'while'", 
                     "'System.out.println'", "'='", "'&&'", "'<'", "'+'", 
                     "'-'", "'*'", "'.'", "'length'", "'true'", "'false'", 
                     "'this'", "'new'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "INTEGER_LITERAL", "WS", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_type1 = 5
    RULE_statements = 6
    RULE_statement = 7
    RULE_exps = 8
    RULE_expression = 9

    ruleNames =  [ "program", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "type1", "statements", "statement", 
                   "exps", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    IDENTIFIER=36
    INTEGER_LITERAL=37
    WS=38
    COMMENT=39
    LINE_COMMENT=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    temp_counter = 0
    label_counter = 0

    def create_temp(self):
        self.temp_counter += 1
        return 'T' + str(self.temp_counter)

    def is_temp(self, value:str):
        if value is None:
            return False
        return value[0] == 'T'

    def remove_temp(self):
        self.temp_counter -= 1

    def reset_temp(self):
        self.temp_counter = 0

    def get_temp(self, *args):
        val = ''
        value_is_set = False
        for t in args:
            if self.is_temp(t):
                if value_is_set is True:
                    self.remove_temp()
                else:
                    val = t
                    value_is_set = True
        if value_is_set is False:
            val = self.create_temp()
        return val

    def create_label(self):
        self.label_counter += 1
        return '<L' + str(self.label_counter) + '>'



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(MiniJava_3addrParser.MainClassContext,0)


        def EOF(self):
            return self.getToken(MiniJava_3addrParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJava_3addrParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJava_3addrParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJava_3addrParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MiniJava_3addrParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.mainClass()
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJava_3addrParser.T__0:
                self.state = 21
                self.classDeclaration()
                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 27
            self.match(MiniJava_3addrParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s1 = None # StatementContext

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJava_3addrParser.IDENTIFIER)
            else:
                return self.getToken(MiniJava_3addrParser.IDENTIFIER, i)

        def statement(self):
            return self.getTypedRuleContext(MiniJava_3addrParser.StatementContext,0)


        def getRuleIndex(self):
            return MiniJava_3addrParser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)




    def mainClass(self):

        localctx = MiniJava_3addrParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(MiniJava_3addrParser.T__0)
            self.state = 30
            self.match(MiniJava_3addrParser.IDENTIFIER)
            self.state = 31
            self.match(MiniJava_3addrParser.T__1)
            self.state = 32
            self.match(MiniJava_3addrParser.T__2)
            self.state = 33
            self.match(MiniJava_3addrParser.T__3)
            self.state = 34
            self.match(MiniJava_3addrParser.T__4)
            self.state = 35
            self.match(MiniJava_3addrParser.T__5)
            self.state = 36
            self.match(MiniJava_3addrParser.T__6)
            self.state = 37
            self.match(MiniJava_3addrParser.T__7)
            self.state = 38
            self.match(MiniJava_3addrParser.T__8)
            self.state = 39
            self.match(MiniJava_3addrParser.T__9)
            self.state = 40
            self.match(MiniJava_3addrParser.IDENTIFIER)
            self.state = 41
            self.match(MiniJava_3addrParser.T__10)
            self.state = 42
            self.match(MiniJava_3addrParser.T__1)
            self.state = 43
            localctx.s1 = self.statement()
            self.state = 44
            self.match(MiniJava_3addrParser.T__11)
            self.state = 45
            self.match(MiniJava_3addrParser.T__11)
            print('main:\nBeginFunc\n' + localctx.s1.prnt + 'EndFunc\n')
            self.reset_temp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJava_3addrParser.IDENTIFIER)
            else:
                return self.getToken(MiniJava_3addrParser.IDENTIFIER, i)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJava_3addrParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJava_3addrParser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJava_3addrParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJava_3addrParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJava_3addrParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)




    def classDeclaration(self):

        localctx = MiniJava_3addrParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(MiniJava_3addrParser.T__0)
            self.state = 50
            self.match(MiniJava_3addrParser.IDENTIFIER)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniJava_3addrParser.T__12:
                self.state = 51
                self.match(MiniJava_3addrParser.T__12)
                self.state = 52
                self.match(MiniJava_3addrParser.IDENTIFIER)


            self.state = 55
            self.match(MiniJava_3addrParser.T__1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJava_3addrParser.T__16) | (1 << MiniJava_3addrParser.T__17) | (1 << MiniJava_3addrParser.IDENTIFIER))) != 0):
                self.state = 56
                self.varDeclaration()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJava_3addrParser.T__2:
                self.state = 62
                self.methodDeclaration()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(MiniJava_3addrParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type1(self):
            return self.getTypedRuleContext(MiniJava_3addrParser.Type1Context,0)


        def IDENTIFIER(self):
            return self.getToken(MiniJava_3addrParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MiniJava_3addrParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)




    def varDeclaration(self):

        localctx = MiniJava_3addrParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.type1()
            self.state = 71
            self.match(MiniJava_3addrParser.IDENTIFIER)
            self.state = 72
            self.match(MiniJava_3addrParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.n = None # Token
            self.ss1 = None # StatementsContext

        def type1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJava_3addrParser.Type1Context)
            else:
                return self.getTypedRuleContext(MiniJava_3addrParser.Type1Context,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJava_3addrParser.IDENTIFIER)
            else:
                return self.getToken(MiniJava_3addrParser.IDENTIFIER, i)

        def expression(self):
            return self.getTypedRuleContext(MiniJava_3addrParser.ExpressionContext,0)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJava_3addrParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJava_3addrParser.VarDeclarationContext,i)


        def statements(self):
            return self.getTypedRuleContext(MiniJava_3addrParser.StatementsContext,0)


        def getRuleIndex(self):
            return MiniJava_3addrParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = MiniJava_3addrParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.match(MiniJava_3addrParser.T__2)
                self.state = 75
                self.type1()
                self.state = 76
                self.match(MiniJava_3addrParser.IDENTIFIER)
                self.state = 77
                self.match(MiniJava_3addrParser.T__6)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJava_3addrParser.T__16) | (1 << MiniJava_3addrParser.T__17) | (1 << MiniJava_3addrParser.IDENTIFIER))) != 0):
                    self.state = 78
                    self.type1()
                    self.state = 79
                    self.match(MiniJava_3addrParser.IDENTIFIER)
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==MiniJava_3addrParser.T__14:
                        self.state = 80
                        self.match(MiniJava_3addrParser.T__14)
                        self.state = 81
                        self.type1()
                        self.state = 82
                        self.match(MiniJava_3addrParser.IDENTIFIER)
                        self.state = 88
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 91
                self.match(MiniJava_3addrParser.T__10)
                self.state = 92
                self.match(MiniJava_3addrParser.T__1)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJava_3addrParser.T__16) | (1 << MiniJava_3addrParser.T__17) | (1 << MiniJava_3addrParser.IDENTIFIER))) != 0):
                    self.state = 93
                    self.varDeclaration()
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 99
                self.match(MiniJava_3addrParser.T__15)
                self.state = 100
                self.expression(0)
                self.state = 101
                self.match(MiniJava_3addrParser.T__13)
                self.state = 102
                self.match(MiniJava_3addrParser.T__11)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(MiniJava_3addrParser.T__2)
                self.state = 105
                self.type1()
                self.state = 106
                localctx.n = self.match(MiniJava_3addrParser.IDENTIFIER)
                self.state = 107
                self.match(MiniJava_3addrParser.T__6)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJava_3addrParser.T__16) | (1 << MiniJava_3addrParser.T__17) | (1 << MiniJava_3addrParser.IDENTIFIER))) != 0):
                    self.state = 108
                    self.type1()
                    self.state = 109
                    self.match(MiniJava_3addrParser.IDENTIFIER)
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==MiniJava_3addrParser.T__14:
                        self.state = 110
                        self.match(MiniJava_3addrParser.T__14)
                        self.state = 111
                        self.type1()
                        self.state = 112
                        self.match(MiniJava_3addrParser.IDENTIFIER)
                        self.state = 118
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 121
                self.match(MiniJava_3addrParser.T__10)
                self.state = 122
                self.match(MiniJava_3addrParser.T__1)
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 123
                        self.varDeclaration() 
                    self.state = 128
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                self.state = 129
                localctx.ss1 = self.statements()
                self.state = 130
                self.match(MiniJava_3addrParser.T__15)
                self.state = 131
                self.expression(0)
                self.state = 132
                self.match(MiniJava_3addrParser.T__13)
                self.state = 133
                self.match(MiniJava_3addrParser.T__11)
                print((None if localctx.n is None else localctx.n.text) + ':\nBeginFunc\n' + localctx.ss1.prnt + 'EndFunc\n')
                self.reset_temp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MiniJava_3addrParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MiniJava_3addrParser.RULE_type1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType1" ):
                listener.enterType1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType1" ):
                listener.exitType1(self)




    def type1(self):

        localctx = MiniJava_3addrParser.Type1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type1)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(MiniJava_3addrParser.T__16)
                self.state = 140
                self.match(MiniJava_3addrParser.T__8)
                self.state = 141
                self.match(MiniJava_3addrParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(MiniJava_3addrParser.T__17)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.match(MiniJava_3addrParser.T__16)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.match(MiniJava_3addrParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.prnt = str()
            self.s1 = None # StatementContext
            self.ss1 = None # StatementsContext

        def statement(self):
            return self.getTypedRuleContext(MiniJava_3addrParser.StatementContext,0)


        def statements(self):
            return self.getTypedRuleContext(MiniJava_3addrParser.StatementsContext,0)


        def getRuleIndex(self):
            return MiniJava_3addrParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = MiniJava_3addrParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statements)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                localctx.s1 = self.statement()
                self.state = 148
                localctx.ss1 = self.statements()
                localctx.prnt = localctx.s1.prnt + localctx.ss1.prnt
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                localctx.s1 = self.statement()
                localctx.prnt = localctx.s1.prnt
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.prnt = str()
            self.ss1 = None # StatementsContext
            self.e1 = None # ExpressionContext
            self.s1 = None # StatementContext
            self.s2 = None # StatementContext
            self._IDENTIFIER = None # Token
            self.e2 = None # ExpressionContext

        def statements(self):
            return self.getTypedRuleContext(MiniJava_3addrParser.StatementsContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJava_3addrParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJava_3addrParser.ExpressionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJava_3addrParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJava_3addrParser.StatementContext,i)


        def IDENTIFIER(self):
            return self.getToken(MiniJava_3addrParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MiniJava_3addrParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = MiniJava_3addrParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 201
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(MiniJava_3addrParser.T__1)
                self.state = 157
                self.match(MiniJava_3addrParser.T__11)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(MiniJava_3addrParser.T__1)
                self.state = 159
                localctx.ss1 = self.statements()
                self.state = 160
                self.match(MiniJava_3addrParser.T__11)
                localctx.prnt = localctx.ss1.prnt
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.match(MiniJava_3addrParser.T__18)
                self.state = 164
                self.match(MiniJava_3addrParser.T__6)
                self.state = 165
                localctx.e1 = self.expression(0)
                self.state = 166
                self.match(MiniJava_3addrParser.T__10)
                self.state = 167
                localctx.s1 = self.statement()
                self.state = 168
                self.match(MiniJava_3addrParser.T__19)
                self.state = 169
                localctx.s2 = self.statement()

                label1 = self.create_label()
                label2 = self.create_label()
                localctx.prnt = localctx.e1.prnt + 'if(' + localctx.e1.val + ') goto ' + label1 + '\n' + localctx.s2.prnt + 'goto ' + label2 + '\n' + label1 + ':\n' + localctx.s1.prnt + label2 + ':\n'

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 172
                self.match(MiniJava_3addrParser.T__20)
                self.state = 173
                self.match(MiniJava_3addrParser.T__6)
                self.state = 174
                localctx.e1 = self.expression(0)
                self.state = 175
                self.match(MiniJava_3addrParser.T__10)
                self.state = 176
                localctx.s1 = self.statement()

                label1 = self.create_label()
                label2 = self.create_label()
                localctx.prnt = 'goto ' + label1 + '\n' + label2 + ':\n' + localctx.s1.prnt + label1 + ':\n' + localctx.e1.prnt + 'if(' + localctx.e1.val + ') goto ' + label2 + '\n'

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 179
                self.match(MiniJava_3addrParser.T__21)
                self.state = 180
                self.match(MiniJava_3addrParser.T__6)
                self.state = 181
                localctx.e1 = self.expression(0)
                self.state = 182
                self.match(MiniJava_3addrParser.T__10)
                self.state = 183
                self.match(MiniJava_3addrParser.T__13)
                localctx.prnt = localctx.e1.prnt + 'Push ' + localctx.e1.val + '\nCall System.out.println,1\n'
                pass
